# Cleanplex

./: .gitignore  CLAUDE.md  PHASE1_TEST_SCENARIOS.md  README.md  cleanplex.service  deploy.sh  pyproject.toml  requirements.txt  start.bat  tmp_validate_ignore.py
cleanplex/: __init__.py  bg_jobs.py  config.py  database.py  filter_engine.py  frame_extractor.py  logger.py  main.py  plex_client.py  scanner.py  sync.py  sync_merge.py  watcher.py
cleanplex/web/: app.py
cleanplex/web/routes/: analytics_routes.py  scanner_routes.py  segments.py  sessions.py  settings.py  sync_routes.py  thumbnails.py  users.py
cleanplex/web/static/: index.html
cleanplex/web/static/assets/: index-BJiqGltM.css  index-BJtEwc4N.js  index-BLsVcPp3.js  index-Bwzj8vio.css  index-CaoAQnJc.js  index-Dt6Pt3c4.js
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css
frontend/src/__tests__/api/: client.test.ts
frontend/src/__tests__/pages/: Dashboard.test.tsx  Library.test.tsx  Settings.test.tsx
frontend/src/api/: client.ts
frontend/src/components/: Layout.tsx
frontend/src/pages/: Analytics.tsx  Dashboard.tsx  Library.tsx  Segments.tsx  Settings.tsx  Users.tsx
scripts/: dev-start.sh  dev-stop.sh  dev-verify.sh
tests/: conftest.py
tests/integration/: test_routes_scanner.py  test_routes_segments.py  test_routes_sessions.py  test_routes_settings.py
tests/unit/: test_bg_jobs.py  test_config.py  test_database.py  test_filter_engine.py  test_plex_client.py  test_plex_client_extended.py  test_scanner_api.py  test_sync.py  test_sync_extended.py  test_sync_merge.py
