[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cleanplex"
version = "0.1.0"
description = "Plex content filter service — automatically skips inappropriate scenes"
license = { file = "LICENSE" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "plexapi>=4.15.0",
    "nudenet>=3.4.2",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "pyyaml>=6.0",
    "python-multipart>=0.0.9",
    "Pillow>=10.0.0",
]

[project.scripts]
cleanplex = "cleanplex.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cleanplex*"]

[tool.setuptools.package-data]
cleanplex = ["web/static/**/*"]
